* GetLevelUpMenuPoints now accounts for iLevelsPerPerk gamesetting (and skipping getting perks each level or so). Thanks Stewie!

===New Functions:
* GetCalculatedPerkPoints
* GetLevelUpMenuCurrentPage
* SetLevelUpMenuCurrentPage
* ShowPerkMenu


//===v1.25

*AS OF THIS VERSION, xNVSE 6.2.3 or greater is required.*

===Changes:
* GetNumActorsInRangeFromRef and GetNumCombatActorsFromActor both have a new OnlyDetectedActors filter flag.
* GetCreatureTurningSpeed and GetCreatureFootWeight are made available as condition functions.
* Added alias to GetNumBrokenEquippedItems -> GetNumBrokenEq 

===Bug Fixes:
* Nada

===New Functions:
* Get/SetExplosionRefSource
* Get/SetExplosionRefRadius
* CreateFolder (made by anhatthezoo!)
* GetActorValueDamage (alias: GetAVDamage)
* GetEquippedItemRefs
* SetShowOffOnCornerMessageEventHandler

===WIP (registered but unfinished)
* ShowSkillMenu
* GetLevelUpMenuUnspentPoints
* SetLevelUpMenuCanExitEarly
* SetLevelUpMenuPoints
* GetPipboyRadioVoiceEntryData  ; quite buggy atm
* Set/GetNoEquipShowOff (alias: Set/GetNoEquipSO)



//===v1.30

===Bug Fixes:
*Fix conflict with Stewie's Tweaks that broke bNoCrippleCriticalMessages=1 + g_bPatchCripple=1. 

===New Functions:
*Get/SetIngestibleConsumeSound
*SetFactionCombatReactionTemp
- The above is still registered, but was split in two for readability:
	*SetAllyTemp (alias: SetAllyShowOff)
	*SetEnemyTemp (alias: SetEnemyShowOff)
*GetEquippedItemRefForItem
*TopicInfoGet/SetResponseStrings
*(WIP functions from last update are still not done, sorry!)

===Credits:
-Trooper for documenting and suggesting SetAlly/EnemyTemp
*lStewieAl for helping fix the conflict.


//===v1.31
===New Function:
*TopicInfoSetNthResponseString


//===v1.35
===Bug Fixes:
* 

===New Functions:
*GetItemCanHaveHealth


====== (Template:)

//===v???
===Bug Fixes:
* 

===New Functions:
*

******DON'T FORGET TO UPDATE THE PLUGIN VERSION BEFORE EVERY RELEASE*********