@@ -139,10 +139,20 @@ In order to filter those out, there is now a new flag: NoSlotlessItems
 
 //===v1.35
 ===Bug Fixes:
-* 
+*Nada
 
 ===New Functions:
 *GetItemCanHaveHealth
+*SayTo_GetSpeakingActor
+*SayTo_GetTopic
+*SayTo_GetTopicInfo
+*SayTo_GetQuest
+*RemoveFormFromFormList
+*GetZoneRespawns
+*ClearCinematicTextQueue
+*GetCellEncounterZone
+*ShowPauseMenu
+*RemoveFormFromLeveledList
 
 
 ====== (Template:)
